@@ -1,0 +1,23 @@
+package org.jax.mgi.dbs.mgd;
+
+/**
+ * @is An object that contains constant definitions for MGI Note types.
+ * @has
+ *   <UL>
+ *   <LI> Constant definitions
+ *   </UL>
+ * @does Nothing
+ * @company The Jackson Laboratory
+ * @author sc
+ * @version 1.0
+ */
+
+public class MGINoteTypeConstants
+{
+    // 
+    // Constants
+    //
+    public static final int MOLECULAR = 1021;
+}
+
+
